# Bookstore

./: Cargo.toml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2020-04-14-011111_create_usr/: down.sql  up.sql
migrations/2020-04-14-115621_create_cart/: down.sql  up.sql
migrations/2020-04-14-170358_create_book/: down.sql  up.sql
migrations/2020-04-14-170454_create_order/: up.sql
migrations/2020-04-14-170508_create_order_contents/: down.sql  up.sql
migrations/2020-04-14-170520_create_order_from_pub/: down.sql  up.sql
migrations/2020-04-14-170528_create_publisher/: down.sql  up.sql
migrations/2020-04-14-170541_create_pub_contact/: down.sql  up.sql
migrations/2020-04-14-170601_create_addrss_postal_code/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
templates/: addbook.html.tera  base.html.tera  book.html.tera  input.html.tera  results.html.tera  search.html.tera
