[package]
name = "rocket"
version = "0.1.0"
authors = ["ljjb9"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rocket_contrib = { version = "0.4.4", default-features = false, features = ["tera_templates"]}